# KusiBot

./: .env.example  .gitignore  Dockerfile  README.md  app.py  config.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  sonar-project.properties  test-results.xml
.github/workflows/: build.yml  docs.yml
api/frontend/templates/: base.html  index.html
deploy/: Dockerfile  docker-compose.yml  docker-entrypoint.sh
docs/source/: app.rst  application.rst  chatbot.rst  conf.py  database.rst  index.rst  services.rst
kusibot/: config.py
kusibot/api/: app.py
kusibot/api/auth/: forms.py  routes.py  utils.py
kusibot/api/chatbot/: routes.py
kusibot/api/main/: routes.py
kusibot/api/professional/: routes.py
kusibot/app/: __init__.py
kusibot/app/auth/: forms.py  routes.py  utils.py
kusibot/app/chatbot/: routes.py
kusibot/app/dashboard/: routes.py
kusibot/app/general/: routes.py
kusibot/app/static/: base.css
kusibot/app/templates/: base.html  forbidden.html  not_found.html
kusibot/chatbot/: __init__.py  assesment_agent.py  chatbot.py  conversation_agent.py  dialogue_manager_agent.py  intent_recognizer_agent.py  manager_agent.py
kusibot/chatbot/assesment_states/: asking_question_state.py  base_state.py  finalizing_state.py  waiting_cat_state.py  waiting_free_state.py
kusibot/chatbot/bert_dialogue_mgr/: label_mapping.json
kusibot/chatbot/questionnaires/: questionnaires.json
kusibot/dashboard/: dashboard.py
kusibot/database/: db.py  db_repositories.py  models.py
kusibot/docs/: architecture.md
kusibot/notebooks/: BERT.ipynb
kusibot/services/: __init__.py  auth_service.py  chatbot_service.py  dashboard_service.py
tests/: conftest.py  first_test.py  test_auth.py  test_main.py
tests/integration/: test_uc01.py  test_uc02.py  test_uc03.py  test_uc04.py  test_uc05.py  test_uc_06_07.py  test_uc_08_09_10.py
tests/performance/: test_response_time.py
tests/unit/chatbot/: test_agents.py
tests/unit/database/: test_repositories.py
(+33 files in other folders)
