[project]
name = "kusibot"
version = "0.1.0"
description = "Chatbot for mental health self-assessments, combining AI-driven conversations with psychological screening."
authors = [
    {name = "Didier Reyes Castro",email = "didieryamil02@gmail.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "flask-wtf (>=1.2.2,<2.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-login (>=0.6.3,<0.7.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "flask-migrate (>=4.1.0,<5.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "flask-bcrypt (>=1.0.1,<2.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "transformers (>=4.49.0,<5.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]

[tool.poetry.group.test.dependencies]
pytest = "^8.3.0"
pytest-cov = "^6.0.0"
pytest-flask = "^1.3.0"

[tool.poetry.scripts]
kusibot = "app:main"

[project.urls]
repository = "https://github.com/didierrc/KusiBot"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
